fix word wrapping for small events

--- a/src/scss/event.scss
+++ b/src/scss/event.scss
@@ -105,6 +105,10 @@
 		}
 	}
 
+	&__name {
+		word-wrap: break-word;
+	}
+
 	&__anchor {
 		text-decoration: none;
 		color: #000;
